[metadata]
name = ship_station
version = 0.0.3
description = "Wrapper for managing Ship Station orders and webhooks"
author = "Christian Clark"
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
install_requires = 
	certifi>=2024.2.2
	charset-normalizer>=3.3.2
	idna>=3.6
	loguru>=0.7.2
	python-dotenv>=1.0.1
	requests>=2.31.0
	setuptools>=69.1.0
	urllib3>=2.2.0
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
ship_station = py.typed

[flake8]
max-line-length = 115
extend-ignore = E203,E501,E701,B006
exclude = src/examples/*, __pycache__, __init__.py


[pylint]
max-line-length = 115