[metadata]
name = ship_station
version = 0.0.3
description = "Wrapper for managing Ship Station orders and webhooks"
author = "Christian Clark"
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires = 
	attrs==23.2.0
	black==24.3.0
	certifi==2024.2.2
	charset-normalizer==3.3.2
	click==8.1.7
	coverage==7.4.4
	flake8==7.0.0
	flake8-bugbear==24.2.6
	idna==3.6
	iniconfig==2.0.0
	isort==5.13.2
	loguru==0.7.2
	mccabe==0.7.0
	mypy==1.9.0
	mypy-extensions==1.0.0
	packaging==24.0
	pathspec==0.12.1
	platformdirs==4.2.0
	pluggy==1.4.0
	pycodestyle==2.11.1
	pydocstyle==6.3.0
	pyflakes==3.2.0
	pytest==8.1.1
	pytest-cov==4.1.0
	python-dotenv==1.0.1
	requests==2.31.0
	setuptools==69.2.0
	snowballstemmer==2.2.0
	types-requests==2.31.0.20240311
	typing_extensions==4.10.0
	urllib3==2.2.1
	validators==0.23.2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src
include=*
exclude=tests/

[options.package_data]
ship_station = py.typed

[flake8]
max-line-length = 115
extend-ignore = E203,E501,E701,B006
exclude = src/examples/*, __pycache__, __init__.py


[pylint]
max-line-length = 115